test/expected/include-err-01.out
include "data/not_found.cdeclrc"
        ^
data/include-err-2.cdeclrc:2,9: error: data/not_found.cdeclrc: could not resolve path
typedef struct A1 A1;
typedef struct A2 A2;
typedef struct B1 B1;
typedef struct B2 B2;
